# calibrated_response

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md  TESTING_NOTES.md  bot_template.py  debug.ipynb  eval.ipynb  eval_scraper.py  large_model_maxentropy_instr_codebase_aware.md  large_model_maxentropy_instr_existing_package.md  math.ipynb  maxentr.ipynb  metaculus_dataset_builder.py  metaculus_eval.ipynb  metaculus_example.py  metaculus_test.ipynb  notes.txt  pipeline_overview.md  playground.ipynb  project.md  pyproject.toml  smothing_notes.md
.claude/: settings.json  settings.local.json
benchmarks/: README.md  benchmark_solver.py  colab_sweep.ipynb  constraints.py  datasets.py  encoding.py  engines.py  metrics.py  run.py  run_benchmark.ipynb
calibrated_response/: __init__.py  pipeline.py
data/: fall_aib_2025_answered_20.jsonl  fall_aib_2025_resolved.jsonl  fall_aib_2025_resolved_hydrated.jsonl  fall_aib_2025_resolved_hydrated_20.jsonl
eval/: run_eval.ipynb
examples/: _gen_debug_nb.py  benchmark.ipynb  calibration_data.ipynb  generate_variables_estimates.ipynb  maxent_large_pipeline.ipynb  maxent_large_sanity.ipynb  maxent_large_simple.ipynb  maxent_large_testing_notebook.ipynb  maxent_llm_cache.pkl  maxent_llm_cache_large.pkl  maxent_mrf.ipynb  maxent_pgmax_sanity_test.py  maxent_pipeline.ipynb  maxent_sanity_test.ipynb  maxent_smm_pipeline.ipynb  pgmax.ipynb  prompt_debug.ipynb  run_evaluation.py  simple_prediction.py  solver_debug.ipynb  ssm_chain.ipynb
metaculus/: arm_abs.json  arm_logit.json  arm_logit_robust.json  arm_n20_e12.json  arm_n20_e20.json  (+44 more)
(+241 files in other folders)
