[project]
name = "calibrated-response"
version = "0.1.0"
description = "Calibrated distribution predictions via maximum entropy combination of LLM predictions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.24.0", 
    "scipy>=1.10.0", 
    "pandas>=2.0.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0", 
    "openai>=0.27.0", 
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "optax>=0.1.7",
    "jaxopt>=0.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
eval = [
    "matplotlib>=3.7.0",
    "scikit-learn>=1.2.0",
    "seaborn>=0.12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
